# GDPR-Bot

./: README.md  main.py  pyproject.toml
.github/workflows/: Lint.yaml
GDPR_Bot/: __main__.py
